Fixed align and layout

--- a/style.css
+++ b/style.css
@@ -43,14 +43,21 @@ nav {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
   border-radius: 8px; /* Rounded corners for a modern look */
   margin: 40px; /* Increased margin for better separation */
+  display: flex;
+  flex-direction: column;
 }
 
-.main-content p {
+p {
   text-align: justify;
 }
 
 h1 {
   color: #3498db; /* Highlight color for the heading */
+  text-align: center;
+}
+
+h1, h2, h3, h4 {
+  text-align: center;
 }
 
 .header-photo {
@@ -59,5 +66,5 @@ h1 {
   width: 300px; /* Set a fixed width for better control */
   height: 300px; /* Set a fixed height for better control */
   /* border-radius: 50%; */
-  margin: 20px 0; /* Adjusted margin for better spacing */
+  margin: 20px auto; /* Adjusted margin for better spacing */
 }
